# TW-Templates-API

./: .env-example  .flake8  .gitignore  Pipfile  README.md  Taskfile.yaml  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  main.py  poetry.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 1_b69b0a194ef0_init_migration.py  2_a14bc286fdb4_remove_permissions_from_role.py  3a362ecb8ed8_just_in_case.py  b69b0a194ef0_init_migration.py  bd81cb3c0105_remove_roles.py
api/: __init__.py  consts.py  database.py  main.py  settings.py
api/application/: app.py  create_app.py
api/apps/auth/: auth.py  base_config.py  manager.py  models.py  oauth2.py  routers.py  schemas.py  utils.py
api/apps/menu/: db_interface.py  enums.py  models.py  responses.py  routers.py  schemas.py  shemas.py
api/migrations/: env.py
api/migrations/versions/: 2024-01-06_chane_is_superuser.py  2024-01-19_init_db.py  2024-01-24_init.py  2024-01-29_fix_table_names.py  bd81cb3c0105_remove_roles.py
migrations/: env.py
migrations/versions/: 46c2bae8a4a1_database_creation.py
misc/: fill_db.py  restart_db.py
shablon-travel/: docker-compose.yaml
shablon-travel/migrations/: env.py
src/: __init__.py  config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  routers.py  schemas.py
testlib/: utils.py
tests/: __init__.py  conftest.py  test_auth.py  test_password.py
