[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
extend-exclude = '''
(
    .*\.local.*
    | .*\.idea.*
    | .*\.vscode.*
)
'''
include = '^.+\.pyi?$'
line-length = 79
target-version = ["py311"]


[tool.django-stubs]
django_settings_module = "project.settings"


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".local",
]


[tool.mypy]
cache_dir = ".local/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude=[".local/*",]
explicit_package_bases = true
files = ["."]
no_implicit_optional = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
    "pydantic.mypy",
]
pretty = true
python_version = "3.11"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.pytest.ini_options]
cache_dir = ".local/pytest/"
console_output_style = "count"
markers = '''
    e2e: end-to-end tests, require running services
    unit: unit tests
'''
testpaths = [
    "tests",
]


[tool.poetry]
name = "templates-app"
version = "0.1.0"
description = "API for Templates app"
authors = ["Eugene <eugenestudio@mail.ru>, Svetlana <pasteyourmail@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
alembic = "1.13.0"
asyncpg = "0.29.0"
sqlalchemy = "2.0.23"
python-dotenv = "1.0.0"
fastapi-users-db-sqlalchemy = "6.0.1"
aiosqlite = "0.19.0"
flake8 = "6.1.0"
isort = "5.13.2"
black = "23.12.0"
mypy = "1.7.1"
debugpy = "1.8.0"
autoflake = "2.2.1"
